--- a/main/css/dokeos_classic_2D/default.css
+++ b/main/css/dokeos_classic_2D/default.css
@@ -2222,7 +2222,6 @@ input.forms	{
 	border-bottom:1px solid #999999;
 	border-top:1px solid #999999;
 	background-color:#efefef;
-	height:100%;
 	padding:2px;
 	margin-bottom: 5px;
 	vertical-align:middle;
@@ -2234,6 +2233,13 @@ input.forms	{
 	padding-left:12px;
 	padding-right:12px;
 	text-align:center;
+}
+.content_table {
+	padding:2px;
+	margin-bottom: 5px;
+	vertical-align:middle;
+	float:left;
+	width:100%;
 }
 .actions img {
 	vertical-align:middle;
@@ -2784,7 +2790,7 @@ button.upload {
 }
 
 .icon_image_content {
-	width:70px;
+	width:80px;
 	cursor:hand;
 	height:8em;
 	text-align: center;
@@ -2796,6 +2802,9 @@ button.upload {
 .question_menu {
 	list-style:none;
 	float:left;
+	padding:0px;
+	margin:-2px;
+	min-height:100px;
 }
 .question_menu li {
 	float:left;
